# Sistema_Academico

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.bat  main.cpp
.cache/clangd/index/: Aluno.cpp.C397DAB35153A89D.idx  Aluno.h.D707CA899C0E9AEC.idx  Departamento.cpp.E456BD5E64D284A9.idx  Departamento.h.3F597412B8E962AF.idx  Disciplina.cpp.367014467A3C826A.idx  Disciplina.h.B1917668826751E8.idx  ElementoAluno.cpp.840A35528777BE16.idx  ElementoAluno.h.0250AFD0AEE38464.idx  ListaAlunos.cpp.C9FAAD5CE6D96500.idx  ListaAlunos.h.7DB9AD354E3EB426.idx  Pessoa.cpp.D30EDFA4C86E422C.idx  Pessoa.h.83FB1602789F8C3F.idx  Principal.cpp.06179B045192A818.idx  Principal.h.2A7C7AE9556422FD.idx  Professor.cpp.A142F98FF6C12B59.idx  Professor.h.A58B7F551D3C68EB.idx  Universidade.cpp.FB842F81AF900DEB.idx  Universidade.h.780C528C6A9AC192.idx
include/: Aluno.h  Departamento.h  Disciplina.h  ElementoAluno.h  ListaAlunos.h  Menu.h  Pessoa.h  Principal.h  Professor.h  Universidade.h
src/: Aluno.cpp  Departamento.cpp  Disciplina.cpp  ElementoAluno.cpp  ListaAlunos.cpp  Menu.cpp  Pessoa.cpp  Principal.cpp  Professor.cpp  Universidade.cpp
templates/: ElementoDeUmaLista.h  Lista.h
